Replace button with link for budget request

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <a href="#expertise">Expertise</a>
       <a href="#contato">Contato</a>
     </nav>
-    <button class="btn-primary">Solicitar Orçamento</button>
+    <a href="https://wa.me/5511951414962" target="_blank" class="btn-primary">Solicitar Orçamento</a>
   </header>
 
   <section class="hero">
@@ -159,7 +159,7 @@
     <p>Maximize a disponibilidade e eficiência das suas máquinas gráficas com nossos serviços de manutenção preventiva e preditiva</p>
     <div class="cta-buttons">
       <button class="btn-primary">Fale com um Especialista</button>
-      <button class="btn-secondary">Conheça Nossos Serviços</button>
+      <a href="#servicos" class="btn-secondary" style="display: inline-block; padding: 12px 30px; background: linear-gradient(135deg, #003d82, #0066cc); color: white; text-decoration: none; border-radius: 4px; font-weight: bold; transition: background 0.3s;">Conheça Nossos Serviços</button>
     </div>
   </section>
 
