Update button text for service request

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <p>Maximize a disponibilidade e eficiência das suas máquinas gráficas com nossos serviços de manutenção preventiva e preditiva</p>
     <div class="cta-buttons">
       <button class="btn-primary">Fale com um Especialista</button>
-      <a href="#servicos" class="btn-secondary" style="display: inline-block; padding: 12px 30px; background: linear-gradient(135deg, #003d82, #0066cc); color: white; text-decoration: none; border-radius: 4px; font-weight: bold; transition: background 0.3s;">Conheça Nossos Serviços</button>
+      <a href="#servicos" class="btn-secondary" style="display: inline-block; padding: 12px 30px; background: linear-gradient(135deg, #003d82, #0066cc); color: white; text-decoration: none; border-radius: 4px; font-weight: bold; transition: background 0.3s;">Solicitar Orçamento Serviços</button>
     </div>
   </section>
 
